--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -21,7 +21,8 @@
 
                 <tbody>
                 <tr *ngFor="let coupon of coupons">
-                  <td><span style="font-size: 17px;">{{coupon.title}}</span><br/><i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
+                  <td><span style="font-size: 17px;">{{coupon.title}}</span><br/><i
+                    style="color: #999; font-size: 15px;">{{coupon.description}}</i>
                   </td>
                   <td><img class="img-thumbnail" [src]="imageUrl(coupon.image)"
                            alt="Card image cap"></td>
@@ -34,22 +35,26 @@
 
               </table>
               <div class="float-right">
-                <h3  class="">Importo totale: {{formatPrice(totalAmount)}}</h3>
-
+                <h3 class="">Importo totale: {{formatPrice(totalAmount)}}</h3>
               </div>
 
-              <h2 >Dati fatturazione</h2>
+              <h2>Dati fatturazione</h2>
 
               <p class=" margin-p"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
               <p class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
               <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
-              <button class="btn btn-lg btn-success float-right ml-2" (click)="openModal(template)">
+              <button class="btn btn-lg btn-success float-right ml-2" *ngIf="!token" (click)="setCheckout()">
                 <i class="fas fa-euro-sign"></i>
-                Conferma e paga
+                Vai a pagare
+              </button>
+              <button class="btn btn-lg btn-success float-right ml-2" *ngIf="token" (click)="confirmPayment()">
+                <i class="fas fa-euro-sign"></i>
+                Paga
               </button>
               <button class="btn btn-lg btn-primary float-right" (click)="retry()">
                 <i class="fas fa-shopping-basket"></i>
-                Ritorna al Carrello</button>
+                Ritorna al Carrello
+              </button>
             </div> <!-- XL TABLE -->
             <div class="container-fluid d-none d-md-none d-lg-block d-xl-none">
               <table class="table table-striped">
@@ -65,7 +70,8 @@
 
                 <tbody>
                 <tr *ngFor="let coupon of coupons">
-                  <td><span style="font-size: 17px;">{{coupon.title}}</span><br/><i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
+                  <td><span style="font-size: 17px;">{{coupon.title}}</span><br/><i
+                    style="color: #999; font-size: 15px;">{{coupon.description}}</i>
                   </td>
                   <td><img class="img-thumbnail" [src]="imageUrl(coupon.image)"
                            alt="Card image cap"></td>
@@ -79,23 +85,24 @@
               </table>
 
               <div class="float-right">
-                <h3  class="">Importo totale: {{formatPrice(totalAmount)}}</h3>
+                <h3 class="">Importo totale: {{formatPrice(totalAmount)}}</h3>
 
               </div>
 
-              <h2 >Dati fatturazione</h2>
+              <h2>Dati fatturazione</h2>
 
               <p class=" margin-p"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
               <p class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
               <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
 
-              <button class="btn btn-lg btn-success float-right ml-2" (click)="openModal(template)">
+              <button class="btn btn-lg btn-success float-right ml-2" (click)="setCheckout()">
                 <i class="fas fa-euro-sign"></i>
                 Conferma e paga
               </button>
               <button class="btn btn-lg btn-primary float-right" (click)="retry()">
                 <i class="fas fa-shopping-basket"></i>
-                Ritorna al Carrello</button>
+                Ritorna al Carrello
+              </button>
             </div> <!-- LG TABLE -->
             <div class="container-fluid d-none d-md-block d-lg-none">
               <table class="table table-striped">
@@ -111,7 +118,8 @@
 
                 <tbody>
                 <tr *ngFor="let coupon of coupons">
-                  <td><span style="font-size: 17px;">{{coupon.title}}</span><br/><i style="color: #999; font-size: 15px;">{{coupon.description.substr(0, 40) + '...'}}</i>
+                  <td><span style="font-size: 17px;">{{coupon.title}}</span><br/><i
+                    style="color: #999; font-size: 15px;">{{coupon.description.substr(0, 40) + '...'}}</i>
                   </td>
                   <td><img class="img-thumbnail" [src]="imageUrl(coupon.image)"
                            alt="Card image cap"></td>
@@ -124,29 +132,29 @@
 
               </table>
               <div class="float-right">
-                <h4  class="">Importo totale: {{formatPrice(totalAmount)}}</h4>
+                <h4 class="">Importo totale: {{formatPrice(totalAmount)}}</h4>
 
               </div>
 
-              <h3 >Dati fatturazione</h3>
+              <h3>Dati fatturazione</h3>
 
               <p class=" margin-p"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
               <p class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
               <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
-              <button class="btn btn-lg btn-success float-right ml-2" (click)="openModal(template)">
+              <button class="btn btn-lg btn-success float-right ml-2" (click)="setCheckout()">
                 <i class="fas fa-euro-sign"></i>
                 Conferma e paga
               </button>
               <button class="btn btn-lg btn-primary float-right" (click)="retry()">
                 <i class="fas fa-shopping-basket"></i>
-                Ritorna al Carrello</button>
+                Ritorna al Carrello
+              </button>
             </div> <!-- MD TABLE -->
-            <div   class="d-none d-sm-block d-lg-none d-md-none d-xl-none">
-
+            <div class="d-none d-sm-block d-lg-none d-md-none d-xl-none">
               <div *ngFor="let coupon of coupons">
                 <div style="background-color: snow; " class="card flex-row flex-wrap">
                   <div style="background-color:snow" class="card-header border-0 col-sm-4 col-5">
-                    <img class="div-image"  [src]="imageUrl(coupon.image)" alt="">
+                    <img class="div-image" [src]="imageUrl(coupon.image)" alt="">
                   </div>
                   <div class="col-sm-8 col-7" style="padding-bottom: 1em; padding-top: 1em">
                     <h5 class="card-text">{{coupon.title}}</h5>
@@ -154,67 +162,13 @@
 
                   </div>
                   <div class="div-description">{{coupon.description}}</div>
-                  <div   class="text-info div-validity">
-
-
-                      Scadenza: {{coupon.valid_until === null? 'Illimitato': formatUntil(coupon.valid_until) }}
-
-                  </div>
-                  <div  class="card-footer w-100 text-muted div-quantity">
-
-                      Quantità: {{coupon.quantity}}
-
-                    <div style="float: right">
-                      {{formatPrice(coupon.price)}}
-                    </div>
-                  </div>
-                </div>
-
-
-
-
-              </div>
-
-              <div class="float-right ">
-                <h5  class="">Importo totale: {{formatPrice(totalAmount)}}</h5>
-
-              </div>
-
-              <h4 class="div-top-info" >Dati fatturazione</h4>
-
-              <p  class=" margin-p"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
-              <p  class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
-              <p  class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
-              <button class="btn btn-lg btn-success p-2  float-right ml-2" (click)="openModal(template)">
-                <i class="fas fa-euro-sign"></i>
-                Conferma e paga
-              </button>
-              <button class="btn btn-lg btn-primary p-2  float-right" (click)="retry()">
-                <i class="fas fa-shopping-basket"></i>
-                Ritorna al carrello</button>
-          </div><!-- SM CARD -->
-
-
-            <div   class="d-block d-xl-none d-sm-none d-md-none d-lg-none ">
-
-              <div *ngFor="let coupon of coupons">
-                <div style="background-color: snow; " class="card flex-row flex-wrap">
-                  <div style="background-color:snow" class="card-header border-0  col-5">
-                    <img class="div-image-xs" [src]="imageUrl(coupon.image)" alt="">
-                  </div>
-                  <div class="col-sm-8 col-7 div-title" >
-                    <h5 class="card-text">{{coupon.title}}</h5>
-
-
-                  </div>
-                  <div class="div-description">{{coupon.description}}</div>
-                  <div   class="text-info div-validity">
+                  <div class="text-info div-validity">
 
 
                     Scadenza: {{coupon.valid_until === null? 'Illimitato': formatUntil(coupon.valid_until) }}
 
                   </div>
-                  <div  class="card-footer w-100 text-muted div-quantity">
+                  <div class="card-footer w-100 text-muted div-quantity">
 
                     Quantità: {{coupon.quantity}}
 
@@ -223,30 +177,73 @@
                     </div>
                   </div>
                 </div>
+              </div>
 
+              <div class="float-right ">
+                <h5 class="">Importo totale: {{formatPrice(totalAmount)}}</h5>
 
+              </div>
 
+              <h4 class="div-top-info">Dati fatturazione</h4>
+
+              <p class=" margin-p"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
+              <p class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
+              <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
+              <button class="btn btn-lg btn-success p-2  float-right ml-2" (click)="setCheckout()">
+                <i class="fas fa-euro-sign"></i>
+                Conferma e paga
+              </button>
+              <button class="btn btn-lg btn-primary p-2  float-right" (click)="retry()">
+                <i class="fas fa-shopping-basket"></i>
+                Ritorna al carrello
+              </button>
+            </div><!-- SM CARD -->
+            <div class="d-block d-xl-none d-sm-none d-md-none d-lg-none ">
+
+              <div *ngFor="let coupon of coupons">
+                <div style="background-color: snow; " class="card flex-row flex-wrap">
+                  <div style="background-color:snow" class="card-header border-0  col-5">
+                    <img class="div-image-xs" [src]="imageUrl(coupon.image)" alt="">
+                  </div>
+                  <div class="col-sm-8 col-7 div-title">
+                    <h5 class="card-text">{{coupon.title}}</h5>
+                  </div>
+                  <div class="div-description">{{coupon.description}}</div>
+                  <div class="text-info div-validity">
+                    Scadenza: {{coupon.valid_until === null? 'Illimitato': formatUntil(coupon.valid_until) }}
+
+                  </div>
+                  <div class="card-footer w-100 text-muted div-quantity">
+                    Quantità: {{coupon.quantity}}
+                    <div style="float: right">
+                      {{formatPrice(coupon.price)}}
+                    </div>
+                  </div>
+                </div>
 
               </div>
 
               <div class="float-right ">
-                <h5  class="">Totale: {{formatPrice(totalAmount)}}</h5>
+                <h5 class="">Totale: {{formatPrice(totalAmount)}}</h5>
 
               </div>
 
-              <h4 class="margin-top-info" >Dati fatturazione</h4>
+              <h4 class="margin-top-info">Dati fatturazione</h4>
 
-              <p  class=" margin-p"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
-              <p  class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
-              <p  class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
-              <button class="btn btn-lg btn-success p-2  float-right ml-2" (click)="openModal(template)">
+              <p class=" margin-p"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
+              <p class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
+              <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
+              <button class="btn btn-lg btn-success p-2  float-right ml-2" (click)="setCheckout()">
                 <i class="fas fa-euro-sign"></i>
                 Paga
               </button>
               <button class="btn btn-lg btn-primary p-2  float-right" (click)="retry()">
                 <i class="fas fa-shopping-basket"></i>
-                Carrello</button>
+                Carrello
+              </button>
             </div><!-- XS CARD -->
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -257,24 +254,32 @@
   <button class="col-sm-5 btn btn-danger" (click)="retry()">Ritorna al Carrello</button>
 </div>
 
-<ng-template  #template>
-  <div  class="modal-header">
+<ng-template #paymentModal>
+  <div class="modal-header">
     <h4 class="modal-title pull-left">Pagamento n. #236748227</h4> <!-- TODO: fix order number -->
-    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
-    </button>
   </div>
 
-  <div  class="modal-body">
-    <p *ngIf="totalAmount !== 0" class="card-text">Seleziona <b>metodo di pagamento</b> preferito, per finalizzare il tuo acquisto.
-      Dopo aver completato il pagamento, riceverai un messaggio di conferma.</p>
-    <p *ngIf="totalAmount === 0" class="card-text">Il tuo ordine è <b>Gratis!</b>, puoi saltare la fase di pagamento. Vuoi confermare il tuo acquisto?</p>
+  <div class="modal-body">
+    <p>Attendi mentre ti reindirizziamo alla pagina di pagamento Paypal</p>
   </div>
 
-  <div   class="modal-footer">
-    <button *ngIf="totalAmount === 0" type="button" class="btn btn-success" (click)="buy()">Conferma acquisto (senza pagare)
+  <!--<div class="modal-footer">
+    <button *ngIf="totalAmount === 0" type="button" class="btn btn-success" (click)="buy()">Conferma acquisto (senza
+      pagare)
     </button>
-    <ngx-paypal   class="mx-auto" *ngIf="totalAmount > 0" [config]="payPalConfig"></ngx-paypal>
+    <ngx-paypal class="mx-auto" *ngIf="totalAmount > 0" [config]="payPalConfig"></ngx-paypal>
+  </div>-->
+</ng-template>
+
+<ng-template #buyWait>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left"><i class="fas fa-hourglass-half mr-2"></i>Verifica dell'ordine in corso</h4>
+  </div>
+
+  <div class="modal-body">
+    Il tuo ordine è in fase di finalizzazione, tra poco potrai pagare il tuo ordine
   </div>
 </ng-template>
 
+
+<!--<ngx-loading [show]="loading" [config]="config"></ngx-loading>-->
