--- a/src/app/core/sidebar/sidebar.component.css
+++ b/src/app/core/sidebar/sidebar.component.css
@@ -13,3 +13,7 @@
 .producer-icon {
   width: 40px;
 }
+
+list-group-item-action:hover, .list-group-item-action:focus {
+  background-color: #e0e0e0 !important;
+}
