--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -69,7 +69,22 @@
           <span class="menu-collapsed">Vidima coupon</span>
         </a>
       </div>
+      <div *ngIf="this.userType == '4' || this.userType == '0'">
 
+        <a [routerLink]="['/reserved-area/broker/list']"
+           class="list-group-item list-group-item-action gray-sardcoin">
+          <div class="text-center d-inline-block producer-icon"><span class="fas fa-box icon-dimension"></span></div>
+          <span class="menu-collapsed">I miei pacchetti</span>
+        </a>
+        <a [routerLink]="['/reserved-area/broker/create']" class="list-group-item list-group-item-action gray-sardcoin">
+          <div class="text-center d-inline-block producer-icon"><span class="fas fa-plus-circle icon-dimension"></span></div>
+          <span class="menu-collapsed">Crea pacchetto</span>
+        </a>
+        <a [routerLink]="['/reserved-area/broker/report']" class="list-group-item list-group-item-action gray-sardcoin">
+          <div class="text-center d-inline-block producer-icon"><span class="fas fa-chart-bar icon-dimension"></span></div>
+          <span class="menu-collapsed">Reports</span>
+        </a>
+      </div>
       <div *ngIf="this.userType != '3'">
 
         <a [routerLink]="[infoUserLink +'personal-info']"
@@ -77,16 +92,17 @@
           <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}">
             <span class="fas fa-user icon-dimension"></span>
           </div>
-          <span *ngIf="!hide || userType == '0' || userType == '1'" class="menu-collapsed">Informazioni personali</span>
+          <span *ngIf="!hide || userType == '0' || userType == '1' || userType == '4'" class="menu-collapsed">Informazioni personali</span>
         </a>
         <a [routerLink]="[infoUserLink +'payment-details']"
            class="list-group-item list-group-item-action gray-sardcoin">
           <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}">
             <span class="fas fa-file-invoice icon-dimension"></span>
           </div>
-          <span *ngIf="!hide || userType == '0' || userType == '1'" class="menu-collapsed">Dati di fatturazione</span>
+          <span *ngIf="!hide || userType == '0' || userType == '1' || userType == '4'" class="menu-collapsed">Dati di fatturazione</span>
         </a>
       </div>
+
     </ul>
   </div>
 </div>
