--- a/src/app/core/breadcrumb/breadcrumb.component.scss
+++ b/src/app/core/breadcrumb/breadcrumb.component.scss
@@ -23,3 +23,21 @@
   background-color: #fff;
 }
 
+#search-suggestions {
+  border: 1px solid #e4e5e6;
+  width: 100%;
+  background-color: #fff;
+  list-style-type: none;
+  position: absolute;
+  padding-left: 0;
+  z-index: 1;
+
+
+  li {
+    padding: 5px 8px;
+  }
+
+  li:hover {
+    background-color: #e4e5e6;
+  }
+}
