--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="couponPass !== null  " class="container-fluid px-0">
+<div *ngIf="couponPass" class="container-fluid px-0">
   <div class="col-xl-6 col-lg-10 col-md-10 col-sm-12 pl-md-0">
     <div class="card mx-4" style="padding: 5px">
       <img class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
       <div class="card-body p-4">
         <h3 class="card-title mb-0">{{couponPass.title}}</h3>
-        <p *ngIf="couponPass.owner">di
+        <p *ngIf="couponPass && couponPass.owner">di
           <i [routerLink]="['/reserved-area/consumer/producer-info']"
              class="font-weight-bold text-primary cursor-pointer">{{producer === null ? null : producer.company_name
             }}</i>
