--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -19,15 +19,19 @@
       <div class="col-md-8 p-0">
         <input type="text" class="form-control form-check-inline align-middle mr-0 p-2"
                style="border-radius: 0; border-right: 0" placeholder="Cerca un coupon..."
-               [(ngModel)]="searchText" (input)="giveSuggestions()"
-        />
-        <!--<ng-container>-->
-          <ul *ngIf="showSuggestions | async" (clickOutside)="showListSuggestions(false)" id="search-suggestions" class="rounded-bottom">
-            <li *ngFor="let coupon of coupons | filter:searchText" (click)="goToCouponDetails(coupon)" class="cursor-pointer">{{coupon.title}}</li>
-          </ul>
-        <!--</ng-container>-->
+               [(ngModel)]="searchText" (input)="giveSuggestions()"/>
+
+        <ul id="search-suggestions" class="rounded-bottom"
+            *ngIf="showSuggestions | async" (clickOutside)="showListSuggestions(false)" >
+          <ng-container *ngFor="let coupon of coupons | filter:searchText; let i = index">
+            <li *ngIf="i < MAX_SUGGESTIONS" (click)="goToCouponDetails(coupon); showListSuggestions(false)" class="cursor-pointer">
+              {{coupon.title}}
+            </li>
+          </ng-container>
+        </ul>
+
       </div>
-      <button class="btn btn-primary" style="border-radius: 0 0.25rem 0.25rem 0"><span class="fas fa-search"></span>
+      <button class="btn btn-primary" (click)="searchCoupons()" style="border-radius: 0 0.25rem 0.25rem 0"><span class="fas fa-search"></span>
       </button> <!-- Search button -->
     </div>
 
