--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid table-responsive d-none d-md-none d-lg-block">
   <div class="col-md-12">
-    <table class="table table-striped table-borderless">
+    <table *ngIf="orders" class="table table-striped table-borderless">
       <thead class="text-uppercase">
         <tr>
           <th scope="col" style="width: 20%">Ordine N°</th>
