--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -30,7 +30,7 @@
       </div>
       <div *ngIf="this.userType == '2' || this.userType == '0'" class="mt-4">
 
-        <a [routerLink]="['/reserved-area/consumer/showcase']" class="list-group-item list-group-item-action gray-sardcoin">
+        <a [routerLink]="['/reserved-area/consumer/showcase']" (click)="resetShowcase()" class="list-group-item list-group-item-action gray-sardcoin">
           <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}" >
             <span class="fas fa-store icon-dimension" [ngStyle]="{'margin-left': hide && userType == '2' ? '-3px ' : '0 '}"></span>
           </div>
