--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -98,12 +98,12 @@
         </div>
       </nav>
     </div>
-    <div class="rounded mx-auto d-block ">
-      <img style="margin-left: 260px" *ngIf="isDesktop" src="assets/img/brand/sardcoin-logo-full.png"
-           class="crop-logo   img-fluid">
+    <div class="rounded mx-auto d-block">
+      <img style="margin-left: 260px" *ngIf="isDesktop" src="assets/img/brand/sardcoin-logo-full.png" [routerLink]="['/']" (click)="resetShowcase()"
+           class="crop-logo img-fluid cursor-pointer">
     </div>
     <div *ngIf="!isDesktop" class="left col-4">
-      <img src="assets/img/brand/sardcoin-logo-full.png  " class="img-fluid crop-logo-small">
+      <img src="assets/img/brand/sardcoin-logo-full.png" class="img-fluid crop-logo-small cursor-pointer" (click)="resetShowcase()" [routerLink]="['/']">
     </div>
 
 
