--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -25,6 +25,9 @@
       </div>
     </div>
   </div>
+  <div class="col-12 text-right" *ngIf="searchResults" (click)="resetShowcase()">
+    <button class="btn btn-lg btn-info text-white"><span class="fas fa-arrow-left mr-2"></span>Torna a tutti i coupon</button>
+  </div>
 </div>
 <ng-template #template>
   <div class="modal-header">
